--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/globe.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FLight Ticket Reservation System</title>
+    <title>Flight Ticket Reservation System</title>
   </head>
   <body>
     <div id="root"></div>
